--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -23,25 +23,27 @@
     rgba(0, 0, 0, 0.04) 0px 10px 10px -5px; */
   border: 1px solid rgb(100, 100, 100);
   --angle: 45deg;
-  background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60));
+  /* background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60));
 
-  background: linear-gradient(rgb(35, 35, 35), rgb(60, 60, 60));
+  background: linear-gradient(rgb(35, 35, 35), rgb(60, 60, 60)); */
 
   /* background: linear-gradient(109.6deg, rgb(6, 2, 2) 32.4%, #177152 98.8%); */
 }
 
-/* .about__card.one {
-  background: linear-gradient(rgb(35, 35, 35) 50%, #e79c02 110%);
+.about__card.one {
+  background: linear-gradient(rgb(35, 35, 35) 50%, #716517 110%);
+  background: linear-gradient(rgb(35, 35, 35) 50%, #712c17 110%);
 }
 .about__card.two {
-  background: linear-gradient(rgb(35, 35, 35) 50%, #177152 110%);
+  background: linear-gradient(rgb(35, 35, 35) 50%, #712c17 110%);
+  background: linear-gradient(rgb(35, 35, 35) 50%, #716517 110%);
 }
 .about__card.three {
   background: linear-gradient(rgb(35, 35, 35) 50%, #177152 110%);
 }
-.about__card.two {
-  background: linear-gradient(rgb(35, 35, 35) 50%, #ff3a1e 110%);
-} */
+.about__card.four {
+  background: linear-gradient(rgb(35, 35, 35) 50%, #175071 110%);
+}
 
 .about__img {
   height: 44%;
@@ -93,25 +95,29 @@
   margin: 0;
 }
 
-/* .icon.about__i1 {
-  color: #ffa51e;
+.icon.about__i1 {
+  color: #ffcb1e;
+  /* color: #ff3a1e; */
 }
 
 .icon.about__i2 {
   color: #ff3a1e;
+  /* color: #ffcb1e; */
 }
 
 .icon.about__i3 {
   color: #1eff62;
+  color: #1e92ff;
 }
 
 .icon.about__i4 {
   color: #1e92ff;
-} */
+  color: #1eff62;
+}
 
-.icon.about__i1,
+/* .icon.about__i1,
 .icon.about__i2,
 .icon.about__i3,
 .icon.about__i4 {
   color: #1e92ff;
-}
+} */
