--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -8,8 +8,7 @@
   gap: 3rem;
   /* padding-top: 10rem; */
   padding-bottom: 10rem;
-  background-color: hsl(0, 0%, 5%);
-}
+  background-color: #121212;
 
 .about__card {
   display: flex;
@@ -18,16 +17,16 @@
   height: 640px;
   overflow: hidden;
   /* background-color: #2f2f2f; */
-  border-radius: 2rem;
-  /* box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
-    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px; */
-  /* border: 1px solid rgb(100, 100, 100); */
+  border-radius: 0.75rem;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px,
+    rgba(0, 0, 0, 0.04) 0px 10px 10px -5px;
+  border: 1px solid rgb(100, 100, 100);
   --angle: 45deg;
-  /* background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60));
+  /* background: linear-gradient(var(--angle), rgb(35, 35, 35), rgb(60, 60, 60)); */
 
-  background: linear-gradient(rgb(35, 35, 35), rgb(60, 60, 60)); */
+  background: linear-gradient(rgb(35, 35, 35), rgb(60, 60, 60));
 
-  background: linear-gradient(109.6deg, rgb(20, 20, 20) 32.4%, #ff3a1e 98.8%);
+  /* background: linear-gradient(109.6deg, rgb(30, 30, 30) 12.4%, #494949 98.8%); */
 }
 
 /* .about__card.one {
@@ -51,7 +50,7 @@
   border-radius: 0 0 0 5rem;
   object-fit: cover;
   height: 100%;
-  /* border-bottom: 1px solid rgb(100, 100, 100); */
+  border-bottom: 1px solid rgb(100, 100, 100);
 }
 
 .about__info {
@@ -67,7 +66,7 @@
 .about__text1 {
   font-family: "Orbitron", sans-serif;
   padding-top: 1.5rem;
-  font-size: var(--size-2xl);
+  font-size: var(--size-xl);
   color: var(--clr-red-light);
   font-weight: 800;
   /* font-style: italic; */
@@ -117,5 +116,5 @@
 .icon.about__i2,
 .icon.about__i3,
 .icon.about__i4 {
-  color: #ffb01e;
+  color: #ff3a1e;
 }
