--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -38,7 +38,9 @@
 /*------------------------------------*\
     MATERIAL PHOTO GALLERY
 \*------------------------------------*/
+
 .m-p-g {
+  /* max-width: 100%; */
   max-width: 860px;
   margin: 0 auto;
 }
