--- a/styles/style.css
+++ b/styles/style.css
@@ -63,7 +63,7 @@ body {
   /* font-family: "Maven Pro", sans-serif; */
   background-color: #e1e0dd;
   /* background-color: #1e202b; */
-  /* background-color: #121212; */
+  background-color: #121212;
   /* background-color: #343434; */
   color: var(--clr-stone-dark);
   font-family: "Jost", sans-serif;
