--- a/styles/style.css
+++ b/styles/style.css
@@ -14,19 +14,13 @@
   --clr-red800: #991b1b;
   --clr-btn: #f44e3f;
   /* --clr-peach: #d33e43; */
-
   /* --clr-peach: #574240; */
   /* --clr-peach: #7c5056; */
   /* --clr-peach: #8f0014; */
   /* --clr-peach: #ba2431; */
-
   /* --clr-peach: #790114; */
   /* --clr-peach: #ca2e32; */
   --clr-peach: #cd031b;
-
-  --clr-sky-dark: #172554;
-  --clr-sky800: #155e75;
-  --clr-sky: #eff6ff;
 
   /* sizes */
   --size-xxs: 0.5rem;
@@ -50,7 +44,7 @@
   margin: 0;
   padding: 0;
   line-height: calc(1em + 0.5rem);
-  /* border: 0.5px solid green; */
+  /* border: 1px solid green; */
   /* background: rgb(0 100 0 / 0.1) !important; */
 }
 
@@ -59,35 +53,12 @@ html {
 }
 
 body {
-  /* margin-top: 10rem; */
-  /* font-family: "Maven Pro", sans-serif; */
-  background-color: #e1e0dd;
+  font-family: "Jost", sans-serif;
+  /* background-color: #e1e0dd; */
   /* background-color: #1e202b; */
   background-color: #121212;
   /* background-color: #343434; */
-  color: var(--clr-stone-dark);
-  font-family: "Jost", sans-serif;
 }
-
-/* body::before {
-  content: "";
-  height: 100vh;
-  width: 100vw;
-  position: fixed;
-  background: linear-gradient(
-        90deg,
-        rgba(255, 255, 255, 0.15) 1px,
-        transparent 1px 45px
-      )
-      50% 50% / 45px 45px,
-    linear-gradient(rgba(255, 255, 255, 0.15) 1px, transparent 1px 45px) 50% 50% /
-      45px 45px;
-  mask: linear-gradient(-25deg, transparent 30%, white);
-  top: 0;
-  transform-style: flat;
-  pointer-events: none;
-  z-index: -1;
-} */
 
 img,
 picture,
@@ -100,7 +71,6 @@ svg {
 }
 
 button {
-  display: inline-block;
   padding: 0;
   border: none;
   background: none;
@@ -115,6 +85,6 @@ h3 {
   margin: 0;
 }
 
-a:hover {
+a {
   text-decoration: none;
 }
