--- a/styles/utils.css
+++ b/styles/utils.css
@@ -23,16 +23,17 @@
 } */
 
 .btn {
-  font-family: "Jost", sans-serif;
-  padding: 1em 2em;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0.7em 2em;
   border-radius: 5rem;
   color: var(--clr-peach);
-  /* margin-top: 2rem; */
-  font-weight: bold;
   font-size: var(--size-base);
-  letter-spacing: 2px;
-  /* text-transform: uppercase; */
-  text-decoration: none;
+  font-weight: 600;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   background: linear-gradient(
     to right,
     rgba(178, 135, 111, 0) 25%,
@@ -46,9 +47,18 @@
 
 .btn:hover {
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
-  color: white;
   color: #fff;
   background-position: 99% 50%;
+}
+
+.btns__container {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.btn-text {
+  width: 250px;
 }
 
 .main-wrapper {
@@ -71,6 +81,17 @@ span {
   width: var(--size-6xl);
   height: var(--size-6xl);
   color: var(--clr-red600);
+}
+
+.section__title {
+  width: 100%;
+  font-family: "Orbitron", sans-serif;
+  text-transform: uppercase;
+  color: var(--clr-stone400);
+  font-size: var(--size-5xl);
+  font-weight: 1000;
+  text-align: center;
+  margin: 0;
 }
 
 /* xxs */
