--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -38,7 +38,7 @@
 .hero__text3 {
   padding-top: 1rem;
   /* padding-bottom: 1rem; */
-  font-size: var(--size-base);
+  font-size: var(--size-xl);
   color: var(--clr-stone600);
   font-weight: 400;
   letter-spacing: 0.75px;
