--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -36,9 +36,9 @@
 }
 
 .hero__text3 {
-  padding-top: 1rem;
-  /* padding-bottom: 1rem; */
-  font-size: var(--size-xl);
+  padding-top: 2rem;
+  padding-bottom: 3rem;
+  font-size: var(--size-lg);
   color: var(--clr-stone600);
   font-weight: 400;
   letter-spacing: 0.75px;
@@ -50,7 +50,6 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  margin-top: 2rem;
   width: 100%;
 }
 
