--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,13 +1,22 @@
-.about {
+.about__container {
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   height: 100%;
   min-height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+.about {
+  padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   gap: 3rem;
-  /* padding-top: 10rem; */
-  padding-bottom: 10rem;
+
   background-color: #121212;
 }
 .about__card {
