--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -1,12 +1,12 @@
 .about__container {
-  padding-top: 5rem;
-  padding-bottom: 5rem;
-  height: 100%;
-  min-height: 100vh;
   display: flex;
   justify-content: center;
-  align-items: center;
+  align-self: center;
   flex-direction: column;
+  background-color: #121212;
+  width: 100%;
+  height: 100%;
+  min-height: 100vh;
 }
 
 .about {
@@ -15,9 +15,7 @@
   flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  gap: 3rem;
-
-  background-color: #121212;
+  gap: 2rem;
 }
 .about__card {
   display: flex;
