--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -2,7 +2,8 @@
   position: relative;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   overflow: hidden;
-  padding-top: 4rem;
+  padding-top: 3rem;
+  background-color: #000;
   /* padding-bottom: 1.4rem; */
 }
 
@@ -30,13 +31,13 @@
   animation-delay: calc(
     (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
-  /* filter: grayscale(1); */
+  filter: grayscale(1);
   transition: 0.5s;
 }
 
 .slider .slider__list .slider__item:hover {
   filter: grayscale(0);
-  transform: scale(1.01);
+  /* transform: scale(1.01); */
 }
 
 .slider .slider__list .slider__item img {
