--- a/styles/components/about.css
+++ b/styles/components/about.css
@@ -3,14 +3,16 @@
   justify-content: center;
   align-self: center;
   flex-direction: column;
-  background-color: #121212;
+  background-color: #463f3e;
+  /* background-color: #121212; */
   width: 100%;
   height: 100%;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
   min-height: 100vh;
 }
 
 .about {
-  padding-top: 2rem;
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -21,7 +23,7 @@
   display: flex;
   flex-direction: column;
   width: 340px;
-  height: 650px;
+  height: 625px;
   overflow: hidden;
   background-color: #2f2f2f;
   border-radius: 1rem;
