--- a/styles/components/gallery.css
+++ b/styles/components/gallery.css
@@ -3,14 +3,15 @@
   justify-content: center;
   align-self: center;
   flex-direction: column;
-  background-color: #343434;
   width: 100%;
   height: 100%;
   min-height: 100vh;
+  background-color: #121212;
+  padding-top: 5rem;
+  padding-bottom: 5rem;
 }
 
 .gallery {
-  padding-top: 2rem;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
   gap: 10px; /* Расстояние между изображениями */
