--- a/styles/components/hero.css
+++ b/styles/components/hero.css
@@ -1,12 +1,12 @@
 .hero {
   height: 100%;
-  /* min-height: 100vh; */
-  padding-top: 4rem;
-  padding-bottom: 4rem;
+  min-height: 100vh;
+  /* padding-top: 4rem; */
+  /* padding-bottom: 4rem; */
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
-  /* justify-content: center; */
+  justify-content: center;
   gap: 3rem;
   align-items: center;
 }
