--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -2,9 +2,9 @@
   position: relative;
   mask-image: linear-gradient(to right, transparent, #000 10% 90%, transparent);
   overflow: hidden;
-  padding-top: 3rem;
-  background-color: #000;
+  /* padding-top: 3rem; */
   /* padding-bottom: 1.4rem; */
+  /* background-color: #000; */
 }
 
 .slider {
@@ -31,7 +31,7 @@
   animation-delay: calc(
     (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: 0.5s;
 }
 
