--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -2,17 +2,17 @@
   width: 100%;
   height: 100%;
   min-height: 100vh;
-  background-color: #e1e0dd;
+  background-color: #490513;
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
 
 .contact__text {
-  padding-top: 2rem;
+  padding-top: 3rem;
   padding-bottom: 3rem;
   font-size: var(--size-xl);
-  color: var(--clr-stone600);
+  color: var(--clr-stone-light);
   font-weight: 400;
   text-align: center;
 }
@@ -21,4 +21,34 @@
   display: flex;
   flex-wrap: wrap;
   flex-direction: column;
+}
+
+.btn-v2 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 0.7em 2em;
+  border-radius: 5rem;
+
+  color: var(--clr-stone-light);
+  font-size: var(--size-base);
+  font-weight: 500;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  background: linear-gradient(
+    to right,
+    rgba(178, 135, 111, 0) 25%,
+    #5b4b4b 75%
+  );
+  background-position: 99% 50%;
+  background-size: 400% 300%;
+  border: 1px solid #fff;
+  transition: 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
+}
+
+.btn-v2:hover {
+  transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
+  color: var(--clr-peach);
+  background-position: 1% 50%;
 }
