--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -4,7 +4,7 @@
   overflow: hidden;
   /* padding-top: 3rem; */
   /* padding-bottom: 1.4rem; */
-  /* background-color: #000; */
+  background-color: #fff;
 }
 
 .slider {
