--- a/styles/style.css
+++ b/styles/style.css
@@ -89,3 +89,15 @@ a,
 a:hover {
   text-decoration: none;
 }
+
+ul,
+ol {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+li {
+  padding: 0;
+  margin: 0;
+}
