--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -1,11 +1,12 @@
 .contact {
   width: 100%;
   height: 100%;
-  min-height: 100vh;
-  background-color: #490513;
+  min-height: 80vh;
+  background-color: #372f2b;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-bottom: 2rem;
 }
 
 .contact__text {
