--- a/styles/components/slider.css
+++ b/styles/components/slider.css
@@ -31,7 +31,7 @@
   animation-delay: calc(
     (500s / var(--quantity)) * (var(--position) - var(--quantity))
   ) !important;
-  filter: grayscale(1);
+  /* filter: grayscale(1); */
   transition: 0.5s;
 }
 
@@ -43,7 +43,7 @@
 .slider .slider__list .slider__item img {
   width: 100%;
   border-radius: 1rem;
-  box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 50px -35px;
+  /* box-shadow: rgba(0, 0, 0, 0.5) 0px 25px 50px -35px; */
 }
 
 @keyframes autoRun {
