--- a/styles/components/contact.css
+++ b/styles/components/contact.css
@@ -44,7 +44,8 @@
   );
   background-position: 99% 50%;
   background-size: 400% 300%;
-  border: 1px solid #fff;
+  border: 1px solid #5b4b4b;
+
   transition: 700ms cubic-bezier(0.165, 0.84, 0.44, 1);
 }
 
@@ -52,4 +53,5 @@
   transition: 400ms cubic-bezier(0.165, 0.84, 0.44, 1);
   color: var(--clr-peach);
   background-position: 1% 50%;
+  border: 1px solid var(--clr-peach);
 }
