--- a/styles/utils.css
+++ b/styles/utils.css
@@ -85,11 +85,11 @@
   padding-bottom: 0.1rem;
 
   background: linear-gradient(109.6deg, rgb(30, 30, 30) 12.4%, #494949 98.8%);
-  background: linear-gradient(
+  /* background: linear-gradient(
     200deg,
     rgb(6, 2, 2) 32.4%,
     var(--clr-peach) 98.8%
-  );
+  ); */
 
   /* border-top: 1px solid rgb(80, 80, 80); */
   /* border-bottom: 1px solid rgb(80, 80, 80); */
