--- a/styles/components/mobile-nav.css
+++ b/styles/components/mobile-nav.css
@@ -1,7 +1,7 @@
 .mobile-nav {
   position: fixed;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   z-index: 999;
   background: rgba(0, 0, 0, 0.75);
   backdrop-filter: blur(10px);
