--- a/styles/style.css
+++ b/styles/style.css
@@ -53,6 +53,8 @@ html {
 }
 
 body {
+  width: 100%;
+  height: 100%;
   font-family: "Jost", sans-serif;
   /* background-color: #e1e0dd; */
   /* background-color: #1e202b; */
